<resources>
    <string name="app_name">DataBinding</string>
    <string name="wechat">微信</string>
    <string name="contact">通讯录</string>
    <string name="find">发现</string>
    <string name="mine">我</string>
    <string name="detail">详情</string>
    <string name="text_login">登录</string>
    <string name="text_back">返回</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_hint_name">请输入用户名</string>
    <string name="text_hint_password">请输入密码</string>
    <string name="text_sure">确定</string>
</resources>
