<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.gnetop.sdk.customdatabinding.model.LoginModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/text_welcome"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_back" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:hint="@string/text_hint_name"
            android:text="@{model.name}"
            android:inputType="text"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/txt_welcome" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@{model.password}"
            android:hint="@string/text_hint_password"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/edt_name" />

        <Button
            android:id="@+id/btn_sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_sure"
            app:layout_constraintTop_toBottomOf="@+id/edt_pass" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
